--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -1,18 +1,18 @@
 {
   "profile": {
-    "greeting": "Welcome to Original Coast Clothing {{user_first_name}}! Click get started to enjoy our sample automated messaging experience. If you want to build a similar one visit https://fb.me/get-sample-oc"
+    "greeting": "Welcome to The University of Technology, Jamaica {{user_first_name}}! Click get started to enjoy our sample automated messaging experience. If you want to build a similar one visit https://fb.me/get-sample-oc"
   },
   "menu": {
     "support": "Customer Support",
     "order": "Order updates",
     "help": "Talk to an agent",
-    "suggestion": "Outfit suggestions",
+    "suggestion": "Pay Tuition",
     "shop": "Shop now",
     "start_over": "Start over"
   },
   "get_started": {
-    "welcome": "Hi {{userFirstName}}! Welcome to Original Coast Clothing where you'll find styles for every occasion.",
-    "guidance": "At any time, use the menu below to navigate through the features",
+    "welcome": "Hi {{userFirstName}}! Welcome to The University of Technology, Jamaica, the home of world class athletes!",
+    "guidance": "At any time, use the menu below to navigate through the options",
     "help": "What we can do to help you today?"
   },
   "leadgen": {
